--- a/.gitignore
+++ b/.gitignore
@@ -138,5 +138,12 @@ typechain-types
 
 # Hardhat files
 cache
-artifacts
+/artifacts/*
+!/artifacts/contracts/
+/artifacts/contracts/*
+!/artifacts/contracts/**
+/artifacts/contracts/**/*.dbg.json
+
+.embeddedMode
+.saleTemplateName
 
