--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "hardhat": "^2.14.0",
     "hardhat-deploy": "^0.11.28",
     "hardhat-deploy-ethers": "^0.3.0-beta.13",
+    "hardhat-gas-reporter": "^1.0.9",
     "ts-node": "^10.9.1",
     "typescript": "^5.0.4"
   }
