--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "verify:sepolia": "npx hardhat run ./src/verify.ts --network sepolia",
     "verify:goerli": "npx hardhat run ./src/verify.ts --network goerli",
     "verify:mainnnet": "npx hardhat run ./src/verify.ts --network mainnnet",
-    "test": "npx hardhat test"
+    "test": "npx hardhat test",
+    "format": "npx prettier --write --plugin=prettier-plugin-solidity contracts/**/*.sol deploy/**/*.ts src/**/*.ts test/**/*.ts"
   },
   "repository": {
     "type": "git",
@@ -36,6 +37,8 @@
     "hardhat-deploy": "^0.11.28",
     "hardhat-deploy-ethers": "^0.3.0-beta.13",
     "hardhat-gas-reporter": "^1.0.9",
+    "prettier": "^3.0.1",
+    "prettier-plugin-solidity": "^1.1.3",
     "ts-node": "^10.9.1",
     "typescript": "^5.0.4"
   }
