--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "@nomiclabs/hardhat-ethers": "^2.2.3",
     "@nomiclabs/hardhat-etherscan": "^3.1.7",
     "@openzeppelin/contracts": "^4.8.3",
+    "@openzeppelin/contracts-upgradeable": "^4.9.3",
+    "@openzeppelin/hardhat-upgrades": "^1.28.0",
     "dotenv": "^16.0.3",
     "hardhat": "^2.14.0",
     "hardhat-deploy": "^0.11.28",
