Added V1.5 deploy & verify scripts

--- a/package.json
+++ b/package.json
@@ -5,13 +5,20 @@
   "main": "index.js",
   "scripts": {
     "node": "npx hardhat node --no-deploy",
-    "deploy:localhost": "npx hardhat deploy --network localhost",
-    "deploy:sepolia": "npx hardhat deploy --network sepolia",
-    "deploy:goerli": "npx hardhat deploy --network goerli",
-    "deploy:mainnnet": "npx hardhat deploy --network mainnnet",
-    "verify:sepolia": "npx hardhat run ./src/verify.ts --network sepolia",
-    "verify:goerli": "npx hardhat run ./src/verify.ts --network goerli",
-    "verify:mainnnet": "npx hardhat run ./src/verify.ts --network mainnnet",
+    "deploy:v1:localhost": "npx hardhat deploy --tags V1 --network localhost",
+    "deploy:v1:sepolia": "npx hardhat deploy --tags V1 --network sepolia",
+    "deploy:v1:goerli": "npx hardhat deploy --tags V1 --network goerli",
+    "deploy:v1:mainnnet": "npx hardhat deploy --tags V1 --network mainnnet",
+    "verify:v1:sepolia": "npx hardhat run ./src/verifyV1.ts --network sepolia",
+    "verify:v1:goerli": "npx hardhat run ./src/verifyV1.ts --network goerli",
+    "verify:v1:mainnnet": "npx hardhat run ./src/verifyV1.ts --network mainnnet",
+    "deploy:v1.5:localhost": "npx hardhat deploy --tags V1.5 --network localhost",
+    "deploy:v1.5:sepolia": "npx hardhat deploy --tags V1.5 --network sepolia",
+    "deploy:v1.5:goerli": "npx hardhat deploy --tags V1.5 --network goerli",
+    "deploy:v1.5:mainnnet": "npx hardhat deploy --tags V1.5 --network mainnnet",
+    "verify:v1.5:sepolia": "npx hardhat run ./src/verifyV1_5.ts --network sepolia",
+    "verify:v1.5:goerli": "npx hardhat run ./src/verifyV1_5.ts --network goerli",
+    "verify:v1.5:mainnnet": "npx hardhat run ./src/verifyV1_5.ts --network mainnnet",
     "test": "npx hardhat test",
     "format": "npx prettier --write --plugin=prettier-plugin-solidity contracts/**/*.sol deploy/**/*.ts src/**/*.ts test/**/*.ts"
   },
