--- a/.gitignore
+++ b/.gitignore
@@ -144,4 +144,7 @@ cache
 .embeddedMode
 .saleTemplateName
 deployments/localhost/*
+!deployments/localhost/.keep
+deployments/hardhat/*
+!deployments/hardhat/.keep
 
