replace goerli to holesky

--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
     "node": "npx hardhat node --no-deploy",
     "deploy:localhost": "npx hardhat deploy --network localhost",
     "deploy:sepolia": "npx hardhat deploy --network sepolia",
-    "deploy:goerli": "npx hardhat deploy --network goerli",
+    "deploy:holesky": "npx hardhat deploy --network holesky",
     "deploy:mainnet": "npx hardhat deploy --network mainnet",
     "verify:sepolia": "npx hardhat run ./src/verify.ts --network sepolia",
-    "verify:goerli": "npx hardhat run ./src/verify.ts --network goerli",
+    "verify:holesky": "npx hardhat run ./src/verify.ts --network holesky",
     "verify:mainnet": "npx hardhat run ./src/verify.ts --network mainnet",
     "test": "npx hardhat test",
     "format": "npx prettier --write --plugin=prettier-plugin-solidity contracts/**/*.sol deploy/**/*.ts src/**/*.ts test/**/*.ts"
