--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "prettier": "^3.0.1",
     "prettier-plugin-solidity": "^1.1.3",
     "ts-node": "^10.9.1",
-    "typescript": "^5.0.4"
+    "typescript": "^5.0.4",
+    "@chainlink/local": "github:smartcontractkit/chainlink-local"
   }
 }
