--- a/package.json
+++ b/package.json
@@ -28,20 +28,18 @@
   "homepage": "https://github.com/DeFiGeek-Community/bulk-auction-factory#readme",
   "devDependencies": {
     "@chainlink/contracts-ccip": "^1.4.0",
-    "@nomicfoundation/hardhat-network-helpers": "^1.0.8",
-    "@nomicfoundation/hardhat-toolbox": "^2.0.2",
-    "@nomiclabs/hardhat-ethers": "^2.2.3",
+    "@chainlink/local": "github:smartcontractkit/chainlink-local",
+    "@nomicfoundation/hardhat-toolbox": "^4.0.0",
     "@nomiclabs/hardhat-etherscan": "^3.1.7",
     "@openzeppelin/contracts": "^4.8.3",
     "dotenv": "^16.0.3",
     "hardhat": "^2.14.0",
-    "hardhat-deploy": "^0.11.28",
-    "hardhat-deploy-ethers": "^0.3.0-beta.13",
+    "hardhat-deploy": "^0.12.0",
+    "hardhat-deploy-ethers": "^0.4.2",
     "hardhat-gas-reporter": "^1.0.9",
     "prettier": "^3.0.1",
     "prettier-plugin-solidity": "^1.1.3",
     "ts-node": "^10.9.1",
-    "typescript": "^5.0.4",
-    "@chainlink/local": "github:smartcontractkit/chainlink-local"
+    "typescript": "^5.0.4"
   }
 }
