--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
   "homepage": "https://github.com/DeFiGeek-Community/bulk-auction-factory#readme",
   "devDependencies": {
     "@chainlink/contracts-ccip": "^1.4.0",
-    "@chainlink/local": "github:smartcontractkit/chainlink-local",
+    "@chainlink/local": "^0.0.1",
     "@nomicfoundation/hardhat-ethers": "^3.0.6",
     "@nomicfoundation/hardhat-toolbox": "^4.0.0",
     "@nomicfoundation/hardhat-verify": "^2.0.7",
