--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "node": "npx hardhat node --no-deploy",
-    "node:l2": "dotenv -- bash -c 'anvil --port 8546 --chain-id 31338 --fork-url https://arbitrum-sepolia.infura.io/v3/$INFURA_API_TOKEN'",
+    "node:anvil": "dotenv -- bash -c 'anvil --port 8547 --chain-id 31338 --fork-url $ETHEREUM_SEPOLIA_RPC_URL'",
+    "node:l2": "dotenv -- bash -c 'npx hardhat node --no-deploy --hostname 0.0.0.0 --fork $ARBITRUM_SEPOLIA_RPC_URL --port 8546'",
+    "node:l2:anvil": "dotenv -- bash -c 'anvil --port 8546 --host 0.0.0.0 --chain-id 31338 --fork-url $ARBITRUM_SEPOLIA_RPC_URL'",
     "deploy:localhost": "npx hardhat deploy --network localhost",
     "deploy:localhost_l2": "npx hardhat deploy --network localhost_l2",
     "deploy:base_sepolia": "npx hardhat deploy --network base_sepolia",
@@ -47,7 +49,11 @@
     "hardhat-gas-reporter": "^1.0.9",
     "prettier": "^3.0.1",
     "prettier-plugin-solidity": "^1.1.3",
+    "prompts": "^2.4.2",
     "ts-node": "^10.9.1",
     "typescript": "^5.0.4"
+  },
+  "dependencies": {
+    "@types/prompts": "^2.4.9"
   }
 }
