--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@nomicfoundation/hardhat-toolbox": "^4.0.0",
     "@nomicfoundation/hardhat-verify": "^2.0.7",
     "@openzeppelin/contracts": "^4.8.3",
+    "@types/prompts": "^2.4.9",
     "dotenv": "^16.0.3",
     "dotenv-cli": "^7.4.2",
     "hardhat": "^2.14.0",
@@ -52,8 +53,5 @@
     "prompts": "^2.4.2",
     "ts-node": "^10.9.1",
     "typescript": "^5.0.4"
-  },
-  "dependencies": {
-    "@types/prompts": "^2.4.9"
   }
 }
